# thegame

./: .gitignore  CMakeLists.txt
include/: game.h  input.h  render.h
src/: game.c  input.c  main.c  raylibhelloworld.c  render.c
